<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/margin_quadruple"
        android:layout_marginRight="@dimen/margin_quadruple"
        android:orientation="vertical"
        android:paddingBottom="@dimen/margin16"
        android:paddingTop="@dimen/margin16">

        <TextView
            style="@style/AppTheme.Sumi.Text.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/registration_page_title" />

        <Spinner
            android:id="@+id/reg_spin_cust_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin16"
            android:entries="@array/cust_type_arrays" />

        <EditText
            android:id="@+id/reg_et_fullname"
            style="@style/AppTheme.Sumi.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin16"
            android:drawableLeft="@drawable/ic_person_outline_black_24dp"
            android:hint="@string/fullname_label"
            android:inputType="textPersonName"
            android:maxLines="1" />

        <EditText
            android:id="@+id/reg_et_email"
            style="@style/AppTheme.Sumi.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin16"
            android:drawableLeft="@drawable/ic_email_24dp"
            android:hint="@string/email_label"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

        <EditText
            android:id="@+id/reg_et_password"
            style="@style/AppTheme.Sumi.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:hint="@string/password_label"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/reg_et_retry_password"
            style="@style/AppTheme.Sumi.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:hint="@string/repeat_password_label"
            android:inputType="textPassword" />

        <Spinner
            android:id="@+id/reg_spin_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:entries="@array/genders_arrays" />

        <EditText
            android:id="@+id/reg_et_no_ktp"
            style="@style/AppTheme.Sumi.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:drawableLeft="@drawable/ic_idcard_24dp"
            android:hint="@string/no_identity_card"
            android:inputType="number" />

        <EditText
            android:id="@+id/reg_et_address"
            style="@style/AppTheme.Sumi.EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin"
            android:background="@drawable/bg_round_accent"
            android:drawableLeft="@drawable/ic_home_24dp"
            android:hint="@string/address_label"
            android:inputType="textMultiLine" />

        <Spinner
            android:id="@+id/reg_spin_provinsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"/>

        <Spinner
            android:id="@+id/reg_spin_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin" />

        <EditText
            android:id="@+id/reg_et_portal_code"
            style="@style/AppTheme.Sumi.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:drawableLeft="@drawable/ic_home_24dp"
            android:hint="@string/portal_code_label"
            android:inputType="number" />

        <EditText
            android:id="@+id/reg_et_phone"
            style="@style/AppTheme.Sumi.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:drawableLeft="@drawable/ic_call_24dp"
            android:hint="@string/no_telphone_label"
            android:inputType="phone" />

        <Spinner
            android:id="@+id/reg_spin_business_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin" />

        <EditText
            android:id="@+id/reg_et_store_name"
            style="@style/AppTheme.Sumi.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:drawableLeft="@drawable/ic_home_24dp"
            android:hint="@string/store_name_label" />

        <include layout="@layout/input_photo_profile_ktp" />

        <Button
            android:id="@+id/reg_bt_submit"
            style="@style/AppTheme.Sumi.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/registration_label" />

    </LinearLayout>

</ScrollView>