<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/transaku_toolbar" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin"
        android:orientation="vertical"
        android:padding="@dimen/padding10"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            style="@style/AppTheme.Sumi.Text.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/registration_page_title" />

        <EditText
            android:id="@+id/regiter_step_two_et_no_ktp"
            style="@style/AppTheme.Sumi.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:drawableLeft="@drawable/ic_idcard_24dp"
            android:hint="@string/no_identity_card"
            android:inputType="number"
            android:maxLines="1"/>

        <EditText
            android:id="@+id/regiter_step_two_et_address"
            style="@style/AppTheme.Sumi.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:background="@drawable/bg_round_accent"
            android:drawableLeft="@drawable/ic_home_24dp"
            android:hint="@string/address_label"
            android:maxLines="2"
            android:inputType="textMultiLine" />

        <Spinner
            android:id="@+id/regiter_step_two_spin_provinsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:background="@drawable/bg_round_accent"/>

        <Spinner
            android:id="@+id/regiter_step_two_spin_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:background="@drawable/bg_round_accent"/>

        <EditText
            android:id="@+id/regiter_step_two_et_portal_code"
            style="@style/AppTheme.Sumi.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:drawableLeft="@drawable/ic_home_24dp"
            android:hint="@string/portal_code_label"
            android:inputType="number"
            android:maxLines="1"/>

        <EditText
            android:id="@+id/regiter_step_two_et_phone"
            style="@style/AppTheme.Sumi.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:drawableLeft="@drawable/ic_call_24dp"
            android:hint="@string/no_telphone_label"
            android:inputType="phone"
            android:maxLines="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:orientation="horizontal">

            <Button
                android:id="@+id/regiter_step_two_bt_batal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:layout_weight="1"
                android:text="@string/cancel_label"
                android:theme="@style/AppTheme.Sumi.BlackButton" />

            <Button
                android:id="@+id/regiter_step_two_bt_next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:layout_weight="1"
                android:text="@string/next_label"
                android:theme="@style/AppTheme.Sumi.RedButton" />

        </LinearLayout>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>