<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_grey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding10">

        <TextView
            android:id="@+id/report_penjualan_barang_tv_start_date"
            style="@style/AppTheme.Sumi.Text.RegulerBlack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:background="@drawable/outline"
            android:drawableLeft="@drawable/ic_calendar"
            android:gravity="center_vertical"
            android:hint="@string/choose_start_date"
            android:padding="@dimen/padding" />

        <TextView
            android:id="@+id/report_penjualan_barang_tv_end_date"
            style="@style/AppTheme.Sumi.Text.RegulerBlack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:background="@drawable/outline"
            android:drawableLeft="@drawable/ic_calendar"
            android:gravity="center_vertical"
            android:hint="@string/choose_end_date"
            android:padding="@dimen/padding" />

        <Button
            android:id="@+id/report_penjualan_barang_bt_search"
            android:theme="@style/AppTheme.Sumi.RedButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginBottom="@dimen/margin"
            android:text="@string/search_label" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/report_penjualan_barang_rv_pengeluaran"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>

